k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: demo-app
  labels:
    app: web
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - name: http
      port: 80
      targetPort: 3000
